--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "responsive-container",
+  "name": "js-responsive-container",
   "version": "1.0.0",
   "description": "Simple responsive container with javascript",
   "main": "index.js",
